voyage service: force http 1.1 to avoid idle connection timeouts (#35)